commit translated contents

--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -3,14 +3,14 @@ title: Migrer d’ASP.NET Core 2.0 vers 2.1
 author: rick-anderson
 description: Cet article aborde les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 à la version 2.1.
 ms.author: riande
-ms.date: 08/14/2018
+ms.date: 09/26/2018
 uid: migration/20_21
-ms.openlocfilehash: 6e3ce8ea7a13fadc20714d8f949c9644cf665135
-ms.sourcegitcommit: 5a2456cbf429069dc48aaa2823cde14100e4c438
+ms.openlocfilehash: c4400a8796d3fc3a2bc0c81bb0fc09da76453eb8
+ms.sourcegitcommit: 517bb1366da2a28b0014e384fa379755c21b47d8
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 08/22/2018
-ms.locfileid: "41902685"
+ms.lasthandoff: 09/26/2018
+ms.locfileid: "47230202"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer d’ASP.NET Core 2.0 vers 2.1
 
@@ -37,9 +37,9 @@ Cet article fournit une vue d’ensemble sur la migration vers ASP.NET Core 2.1.
 Mettre à jour le fichier projet :
 
 * Modifier le framework cible pour .NET Core 2.1 en mettant à jour le fichier projet pour `<TargetFramework>netcoreapp2.1</TargetFramework>`.
-* Remplacez la référence de package pour `Microsoft.AspNetCore.All` avec une référence de package pour `Microsoft.AspNetCore.App`. Vous devrez peut-être ajouter des dépendances qui ont été supprimés de `Microsoft.AspNetCore.All`. Pour plus d’informations, consultez <xref:fundamentals/metapackage#migrate> et <xref:fundamentals/metapackage-app>. Pour les applications qui ciblent le .NET Framework :
-  * Ajouter des références de package individuels au lieu d’une référence de métapackage.
-  * Mettre à jour chaque référence de package à la version 2.1.
+* Remplacez la référence de package pour `Microsoft.AspNetCore.All` avec une référence de package pour `Microsoft.AspNetCore.App`. Vous devrez peut-être ajouter des dépendances qui ont été supprimés de `Microsoft.AspNetCore.All`. Pour plus d’informations, consultez <xref:fundamentals/metapackage#migrate> et <xref:fundamentals/metapackage-app>.
+* Supprimez l’attribut « Version » sur la référence de package à `Microsoft.AspNetCore.App`. Les projets qui utilisent `<Project Sdk="Microsoft.NET.Sdk.Web">` n’avez pas besoin de définir la version. La version est impliquée par le framework cible et sélectionnée pour mieux correspondre à la façon dont ASP.NET Core 2.1 fonctionne. (Voir ci-dessous pour plus d’informations.)
+* Pour les applications qui ciblent le .NET Framework, mettez à jour chaque référence de package à la version 2.1.
 * Supprimer les références à **&lt;DotNetCliToolReference&gt;** éléments pour les packages suivants. Ces outils sont regroupés par défaut dans l’interface CLI .NET Core et n’avez pas besoin d’installer séparément.
   * Microsoft.DotNet.Watcher.Tools (`dotnet watch`)
   * Microsoft.EntityFrameworkCore.Tools.DotNet (`dotnet ef`)
@@ -56,25 +56,25 @@ Le balisage suivant montre le fichier de 2.1 projet modèle généré :
 
 [!code-xml[Main](20_21/sample/WebApp21.csproj)]
 
-## <a name="rules-for-projects-targeting-the-shared-runtime"></a>Règles pour les projets ciblant le runtime partagé
+## <a name="rules-for-projects-targeting-the-shared-framework"></a>Règles pour les projets qui ciblent le framework partagé
 
-ASP.NET Core inclut les runtimes partagés suivants :
+ASP.NET Core 2.1 inclut les infrastructures partagées suivantes :
 
 * [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app)
 * [Microsoft.AspNetCore.All](xref:fundamentals/metapackage)
 
 La version spécifiée par la référence de package est le *minimum requis* version. Par exemple, un projet faisant référence à la 2.1.1 versions de ces packages ne s’exécute sur un ordinateur avec uniquement le 2.1.0 runtime est installé.
 
-Problèmes connus pour les projets ciblant le runtime partagé :
+Problèmes connus pour les projets qui ciblent le framework partagé :
 
-* À l’aide de `Microsoft.AspNetCore.App` 2.1.0 avec Entity Framework Core 2.1.1 provoque des échecs de restauration NuGet en raison de conflits de package. La solution recommandée consiste à mettre à niveau `Microsoft.AspNetCore.App` à 2.1.1. Pour plus d’informations, consultez [Packages qui partagent des dépendances avec Microsoft.AspNetCore.App ne peut pas référencer les versions correctives](https://github.com/aspnet/Universe/issues/1180).
+* Le Kit de développement .NET Core 2.1.300 SDK (la première fois dans Visual Studio 15.6) Définissez la version implicite du `Microsoft.AspNetCore.App` à 2.1.0 qui ont provoqué des conflits avec Entity Framework Core 2.1.1. La solution recommandée consiste à mettre à niveau le SDK .NET Core vers 2.1.301 ou version ultérieure. Pour plus d’informations, consultez [Packages qui partagent des dépendances avec Microsoft.AspNetCore.App ne peut pas référencer les versions correctives](https://github.com/aspnet/Universe/issues/1180).
 * Tous les projets qui doivent utiliser `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App` doit d’ajouter une référence de package pour le package dans le fichier projet, même s’ils contiennent une référence de projet à un autre projet à l’aide `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App`.
 
   Exemple :
 
   * `MyApp` a une référence de package à `Microsoft.AspNetCore.App`.
   * `MyApp.Tests` a une référence de projet à `MyApp.csproj`.
-  
+
   Ajoutez une référence de package pour `Microsoft.AspNetCore.App` à `MyApp.Tests`. Pour plus d’informations, consultez [test d’intégration est difficile à configurer et peut entraîner la rupture pour la maintenance de l’infrastructure partagée](https://github.com/aspnet/Home/issues/3156).
 
 ## <a name="update-to-the-21-docker-images"></a>Mettre à jour vers les images de Docker 2.1
