commit translated contents

--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -3,14 +3,15 @@ title: Migrer d’ASP.NET Core 2.0 vers 2.1
 author: rick-anderson
 description: Cet article aborde les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 à la version 2.1.
 ms.author: riande
-ms.date: 09/26/2018
+ms.custom: mvc
+ms.date: 10/09/2018
 uid: migration/20_21
-ms.openlocfilehash: c4400a8796d3fc3a2bc0c81bb0fc09da76453eb8
-ms.sourcegitcommit: 517bb1366da2a28b0014e384fa379755c21b47d8
+ms.openlocfilehash: 2a22d135c5f4b8d9808eb7029330e794da455966
+ms.sourcegitcommit: 4bdf7703aed86ebd56b9b4bae9ad5700002af32d
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/26/2018
-ms.locfileid: "47230202"
+ms.lasthandoff: 10/15/2018
+ms.locfileid: "49325937"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer d’ASP.NET Core 2.0 vers 2.1
 
@@ -50,11 +51,11 @@ Mettre à jour le fichier projet :
 
 Le balisage suivant montre le fichier générés par des modèles de 2.0 projet :
 
-[!code-xml[Main](20_21/sample/WebApp20.csproj)]
+[!code-xml[](20_21/sample/WebApp20.csproj)]
 
 Le balisage suivant montre le fichier de 2.1 projet modèle généré :
 
-[!code-xml[Main](20_21/sample/WebApp21.csproj)]
+[!code-xml[](20_21/sample/WebApp21.csproj)]
 
 ## <a name="rules-for-projects-targeting-the-shared-framework"></a>Règles pour les projets qui ciblent le framework partagé
 
@@ -83,7 +84,7 @@ Dans ASP.NET Core 2.1, les images Docker migré vers le [du référentiel GitHub
 
 |2.0      |2.1      |
 |---------|---------|
-|Microsoft / aspnetcore:2.0        |Microsoft / dotnet:2.1-aspnetcore-runtime |
+|Microsoft / aspnetcore:2.0        |microsoft/dotnet:2.1-aspnetcore-runtime |
 |Microsoft/aspnetcore-build : 2.0  |Microsoft / dotnet:2.1-sdk |
 
 Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les balises et nouveaux noms d’image dans la colonne 2.1 de la table précédente. Pour plus d’informations, consultez [migration à partir de référentiels de docker aspnetcore à dotnet](https://github.com/aspnet/Announcements/issues/298).
@@ -104,7 +105,7 @@ L’illustration suivante montre le code 2.1. Le code en vert remplacé la versi
 
 Le code suivant montre la version 2.1 de *Program.cs*:
 
-[!code-csharp[Main](20_21/sample/Program.cs?name=snippet)]
+[!code-csharp[](20_21/sample/Program.cs?name=snippet)]
 
 La nouvelle `Main` remplace l’appel à `BuildWebHost` avec [CreateWebHostBuilder](/dotnet/api/microsoft.aspnetcore.mvc.testing.webapplicationfactory-1.createwebhostbuilder). [IWebHostBuilder](/dotnet/api/microsoft.aspnetcore.hosting.iwebhostbuilder) a été ajouté pour prendre en charge un nouveau [infrastructure de test d’intégration](xref:test/integration-tests).
 
@@ -112,7 +113,7 @@ La nouvelle `Main` remplace l’appel à `BuildWebHost` avec [CreateWebHostBuild
 
 Le code suivant montre les modifications de code de modèle 2.1 généré. Toutes les modifications sont nouvellement ajoutées du code, à ceci près que `UseBrowserLink` a été supprimée :
 
-[!code-csharp[Main](20_21/sample/Startup.cs?highlight=3,4,21-26,30,42,45,47)]
+[!code-csharp[](20_21/sample/Startup.cs?highlight=3,4,21-26,30,42,45,47)]
 
 Les modifications de code précédentes sont détaillées dans :
 
@@ -179,11 +180,11 @@ Cette section décrit les étapes pour remplacer le code d’identité généré
 
   Le code suivant illustre la mise à jour  *\_LoginPartial.cshtml* fichier :
 
-  [!code-cshtml[Main](20_21/sample/_LoginPartial.cshtml?highlight=8,11,22,23)]
+  [!code-cshtml[](20_21/sample/_LoginPartial.cshtml?highlight=8,11,22,23)]
 
 Mise à jour `ConfigureServices` par le code suivant :
 
-[!code-csharp[Main](20_21/sample/Startup2.cs?name=snippet)]
+[!code-csharp[](20_21/sample/Startup2.cs?name=snippet)]
 
 ## <a name="changes-to-razor-pages-projects-razor-files"></a>Modifie les projets fichiers Razor pages Razor
 
@@ -230,6 +231,20 @@ Les éléments suivants sont ajoutés :
 * Le `Privacy` méthode d’action est ajoutée au contrôleur Home.
 
 Consultez [RGPD prennent en charge dans ASP.NET Core](xref:security/gdpr) pour plus d’informations sur les fichiers mentionnés précédemment.
+
+## <a name="changes-to-the-launchsettingsjson-file"></a>Modifications apportées au fichier launchSettings.json
+
+Comme les applications ASP.NET Core utilisent maintenant HTTPS par défaut, le *Properties/launchSettings.json* fichier a été modifié.
+
+Le JSON suivant illustre le 2.0 antérieure modèle généré *launchSettings.json* fichier :
+
+[!code-json[](20_21/sample/launchSettings20.json)]
+
+Le JSON suivant illustre le nouveau 2.1 modèle généré *launchSettings.json* fichier :
+
+[!code-json[](20_21/sample/launchSettings21.json)]
+
+Pour plus d'informations, consultez <xref:security/enforcing-ssl>.
 
 ## <a name="additional-changes"></a>Modifications supplémentaires
 
