--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Cet article aborde les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 à la version 2.1.
 ms.author: riande
 ms.custom: mvc
-ms.date: 10/09/2018
+ms.date: 12/04/2018
 uid: migration/20_21
-ms.openlocfilehash: 2a22d135c5f4b8d9808eb7029330e794da455966
-ms.sourcegitcommit: 4bdf7703aed86ebd56b9b4bae9ad5700002af32d
+ms.openlocfilehash: f6d0dd9afe4519149bffed148db967dd4b86e8d7
+ms.sourcegitcommit: 9bb58d7c8dad4bbd03419bcc183d027667fefa20
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 10/15/2018
-ms.locfileid: "49325937"
+ms.lasthandoff: 12/04/2018
+ms.locfileid: "52862146"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer d’ASP.NET Core 2.0 vers 2.1
 
@@ -47,7 +47,7 @@ Mettre à jour le fichier projet :
   * Microsoft.Extensions.Caching.SqlConfig.Tools (`dotnet sql-cache`)
   * Microsoft.Extensions.SecretManager.Tools (`dotnet user-secrets`)
 * Facultatif : vous pouvez supprimer le **&lt;DotNetCliToolReference&gt;** élément pour `Microsoft.VisualStudio.Web.CodeGeneration.Tools`. Vous pouvez remplacer cet outil avec une version installée dans le monde entier en exécutant `dotnet tool install -g dotnet-aspnet-codegenerator`.
-* Pour 2.1, une [bibliothèque de classes Razor](xref:razor-pages/ui-class) est la solution recommandée pour distribuer les fichiers Razor. Si votre application utilise des vues incorporés, ou sinon repose sur la compilation pour le runtime de fichiers Razor, ajoutez `<CopyRefAssembliesToPublishDirectory>true</CopyRefAssembliesToPublishDirectory>` à votre fichier projet.
+* Pour 2.1, une [bibliothèque de classes Razor](xref:razor-pages/ui-class) est la solution recommandée pour distribuer les fichiers Razor. Si votre application utilise des vues incorporés, ou sinon repose sur la compilation pour le runtime de fichiers Razor, ajoutez `<CopyRefAssembliesToPublishDirectory>true</CopyRefAssembliesToPublishDirectory>` à un `<PropertyGroup>` dans votre fichier projet.
 
 Le balisage suivant montre le fichier générés par des modèles de 2.0 projet :
 
