--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,14 +4,14 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 11/19/2018
+ms.date: 12/04/2018
 uid: migration/21-to-22
-ms.openlocfilehash: 281b3726c01c02b841b961522478b714c47d39c9
-ms.sourcegitcommit: 04b55a5ce9d649ff2df926157ec28ae47afe79e2
+ms.openlocfilehash: e8f98825d8a68fd88173ca146e3b6fc198570c91
+ms.sourcegitcommit: 7c59fc79410185be6c973e5e6e6dd85cf6efc4d6
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 11/20/2018
-ms.locfileid: "52157444"
+ms.lasthandoff: 12/05/2018
+ms.locfileid: "52897988"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer d’ASP.NET Core 2.1 vers 2.2
 
@@ -19,25 +19,7 @@ Par [Scott Addie](https://github.com/scottaddie)
 
 Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 existant vers ASP.NET Core 2.2.
 
-## <a name="prerequisites"></a>Prérequis
-
-# <a name="visual-studiotabvisual-studio"></a>[Visual Studio](#tab/visual-studio)
-
-* [Visual Studio 2017 version 15.9 ou ultérieure](https://www.visualstudio.com/downloads/) avec la **ASP.NET et développement web** charge de travail
-* [.NET core SDK 2.2 ou version ultérieur](https://www.microsoft.com/net/download/all)
-
-# <a name="visual-studio-codetabvisual-studio-code"></a>[Visual Studio Code](#tab/visual-studio-code)
-
-* [Visual Studio Code](https://code.visualstudio.com/download)
-* [.NET core SDK 2.2 ou version ultérieur](https://www.microsoft.com/net/download/all)
-* [C# pour Visual Studio Code](https://marketplace.visualstudio.com/items?itemName=ms-vscode.csharp)
-
-# <a name="visual-studio-for-mactabvisual-studio-mac"></a>[Visual Studio pour Mac](#tab/visual-studio-mac)
-
-* [Visual Studio pour Mac version 7.7 ou ultérieure](https://www.visualstudio.com/downloads/)
-* [Kit de développement logiciel 2.2 ou version ultérieure de .NET core](https://www.microsoft.com/net/download/all) (inclus dans l’installation de Visual Studio)
-
----
+[!INCLUDE[](~/includes/net-core-prereqs-all-2.2.md)]
 
 ## <a name="update-target-framework-moniker-tfm"></a>Mettre à jour le Moniker du Framework cible
 
@@ -60,7 +42,7 @@ Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json
 ```json
 {
   "sdk": {
-    "version": "2.2.0"
+    "version": "2.2.100"
   }
 }
 ```
@@ -101,6 +83,17 @@ Mettre à jour la version de compatibilité dans `Startup.ConfigureServices` à 
 services.AddMvc()
         .SetCompatibilityVersion(CompatibilityVersion.Version_2_2);
 ```
+
+## <a name="update-docker-images"></a>Mettre à jour des images Docker
+
+Le tableau suivant montre l’image Docker de modifications de la balise :
+
+|2.1                                       |2.2                                       |
+|------------------------------------------|------------------------------------------|
+|`microsoft/dotnet:2.1-aspnetcore-runtime` |`microsoft/dotnet:2.2-aspnetcore-runtime` |
+|`microsoft/dotnet:2.1-sdk`                |`microsoft/dotnet:2.2-sdk`                |
+
+Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.
 
 ## <a name="additional-resources"></a>Ressources supplémentaires
 
