--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,76 +4,58 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 11/19/2018
+ms.date: 12/04/2018
 uid: migration/21-to-22
-ms.openlocfilehash: 281b3726c01c02b841b961522478b714c47d39c9
-ms.sourcegitcommit: 04b55a5ce9d649ff2df926157ec28ae47afe79e2
+ms.openlocfilehash: e8f98825d8a68fd88173ca146e3b6fc198570c91
+ms.sourcegitcommit: 7c59fc79410185be6c973e5e6e6dd85cf6efc4d6
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 11/20/2018
-ms.locfileid: "52157444"
+ms.lasthandoff: 12/05/2018
+ms.locfileid: "52897988"
 ---
-# <a name="migrate-from-aspnet-core-21-to-22"></a><span data-ttu-id="8550c-103">Migrer d’ASP.NET Core 2.1 vers 2.2</span><span class="sxs-lookup"><span data-stu-id="8550c-103">Migrate from ASP.NET Core 2.1 to 2.2</span></span>
+# <a name="migrate-from-aspnet-core-21-to-22"></a><span data-ttu-id="d5a22-103">Migrer d’ASP.NET Core 2.1 vers 2.2</span><span class="sxs-lookup"><span data-stu-id="d5a22-103">Migrate from ASP.NET Core 2.1 to 2.2</span></span>
 
-<span data-ttu-id="8550c-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="8550c-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
+<span data-ttu-id="d5a22-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="d5a22-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
 
-<span data-ttu-id="8550c-105">Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 existant vers ASP.NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="8550c-105">This article explains how to update an existing ASP.NET Core 2.1 project to ASP.NET Core 2.2.</span></span>
+<span data-ttu-id="d5a22-105">Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 existant vers ASP.NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="d5a22-105">This article explains how to update an existing ASP.NET Core 2.1 project to ASP.NET Core 2.2.</span></span>
 
-## <a name="prerequisites"></a><span data-ttu-id="8550c-106">Prérequis</span><span class="sxs-lookup"><span data-stu-id="8550c-106">Prerequisites</span></span>
+[!INCLUDE[](~/includes/net-core-prereqs-all-2.2.md)]
 
-# <a name="visual-studiotabvisual-studio"></a>[<span data-ttu-id="8550c-107">Visual Studio</span><span class="sxs-lookup"><span data-stu-id="8550c-107">Visual Studio</span></span>](#tab/visual-studio)
+## <a name="update-target-framework-moniker-tfm"></a><span data-ttu-id="d5a22-106">Mettre à jour le Moniker du Framework cible</span><span class="sxs-lookup"><span data-stu-id="d5a22-106">Update Target Framework Moniker (TFM)</span></span>
 
-* <span data-ttu-id="8550c-108">[Visual Studio 2017 version 15.9 ou ultérieure](https://www.visualstudio.com/downloads/) avec la **ASP.NET et développement web** charge de travail</span><span class="sxs-lookup"><span data-stu-id="8550c-108">[Visual Studio 2017 version 15.9 or later](https://www.visualstudio.com/downloads/) with the **ASP.NET and web development** workload</span></span>
-* [<span data-ttu-id="8550c-109">.NET core SDK 2.2 ou version ultérieur</span><span class="sxs-lookup"><span data-stu-id="8550c-109">.NET Core SDK 2.2 or later</span></span>](https://www.microsoft.com/net/download/all)
-
-# <a name="visual-studio-codetabvisual-studio-code"></a>[<span data-ttu-id="8550c-110">Visual Studio Code</span><span class="sxs-lookup"><span data-stu-id="8550c-110">Visual Studio Code</span></span>](#tab/visual-studio-code)
-
-* [<span data-ttu-id="8550c-111">Visual Studio Code</span><span class="sxs-lookup"><span data-stu-id="8550c-111">Visual Studio Code</span></span>](https://code.visualstudio.com/download)
-* [<span data-ttu-id="8550c-112">.NET core SDK 2.2 ou version ultérieur</span><span class="sxs-lookup"><span data-stu-id="8550c-112">.NET Core SDK 2.2 or later</span></span>](https://www.microsoft.com/net/download/all)
-* [<span data-ttu-id="8550c-113">C# pour Visual Studio Code</span><span class="sxs-lookup"><span data-stu-id="8550c-113">C# for Visual Studio Code</span></span>](https://marketplace.visualstudio.com/items?itemName=ms-vscode.csharp)
-
-# <a name="visual-studio-for-mactabvisual-studio-mac"></a>[<span data-ttu-id="8550c-114">Visual Studio pour Mac</span><span class="sxs-lookup"><span data-stu-id="8550c-114">Visual Studio for Mac</span></span>](#tab/visual-studio-mac)
-
-* [<span data-ttu-id="8550c-115">Visual Studio pour Mac version 7.7 ou ultérieure</span><span class="sxs-lookup"><span data-stu-id="8550c-115">Visual Studio for Mac version 7.7 or later</span></span>](https://www.visualstudio.com/downloads/)
-* <span data-ttu-id="8550c-116">[Kit de développement logiciel 2.2 ou version ultérieure de .NET core](https://www.microsoft.com/net/download/all) (inclus dans l’installation de Visual Studio)</span><span class="sxs-lookup"><span data-stu-id="8550c-116">[.NET Core SDK 2.2 or later](https://www.microsoft.com/net/download/all) (included in the Visual Studio install)</span></span>
-
----
-
-## <a name="update-target-framework-moniker-tfm"></a><span data-ttu-id="8550c-117">Mettre à jour le Moniker du Framework cible</span><span class="sxs-lookup"><span data-stu-id="8550c-117">Update Target Framework Moniker (TFM)</span></span>
-
-<span data-ttu-id="8550c-118">Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks#referring-to-frameworks) d’une version supérieure ou égale à .NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="8550c-118">Projects targeting .NET Core should use the [TFM](/dotnet/standard/frameworks#referring-to-frameworks) of a version greater than or equal to .NET Core 2.2.</span></span> <span data-ttu-id="8550c-119">Mise à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:</span><span class="sxs-lookup"><span data-stu-id="8550c-119">Update the `<TargetFramework>` node's inner text with `netcoreapp2.2`:</span></span>
+<span data-ttu-id="d5a22-107">Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks#referring-to-frameworks) d’une version supérieure ou égale à .NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="d5a22-107">Projects targeting .NET Core should use the [TFM](/dotnet/standard/frameworks#referring-to-frameworks) of a version greater than or equal to .NET Core 2.2.</span></span> <span data-ttu-id="d5a22-108">Mise à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:</span><span class="sxs-lookup"><span data-stu-id="d5a22-108">Update the `<TargetFramework>` node's inner text with `netcoreapp2.2`:</span></span>
 
 ```xml
 <TargetFramework>netcoreapp2.2</TargetFramework>
 ```
 
-<span data-ttu-id="8550c-120">Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du Framework cible d’une version supérieure ou égale à .NET Framework 4.6.1 :</span><span class="sxs-lookup"><span data-stu-id="8550c-120">Projects targeting .NET Framework may continue to use the TFM of a version greater than or equal to .NET Framework 4.6.1:</span></span>
+<span data-ttu-id="d5a22-109">Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du Framework cible d’une version supérieure ou égale à .NET Framework 4.6.1 :</span><span class="sxs-lookup"><span data-stu-id="d5a22-109">Projects targeting .NET Framework may continue to use the TFM of a version greater than or equal to .NET Framework 4.6.1:</span></span>
 
 ```xml
 <TargetFramework>net461</TargetFramework>
 ```
 
-## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="8550c-121">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="8550c-121">Update .NET Core SDK version in global.json</span></span>
+## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="d5a22-110">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="d5a22-110">Update .NET Core SDK version in global.json</span></span>
 
-<span data-ttu-id="8550c-122">Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :</span><span class="sxs-lookup"><span data-stu-id="8550c-122">If your solution relies upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update its `version` property to the 2.2 version installed on your machine:</span></span>
+<span data-ttu-id="d5a22-111">Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :</span><span class="sxs-lookup"><span data-stu-id="d5a22-111">If your solution relies upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update its `version` property to the 2.2 version installed on your machine:</span></span>
 
 ```json
 {
   "sdk": {
-    "version": "2.2.0"
+    "version": "2.2.100"
   }
 }
 ```
 
-## <a name="update-package-references"></a><span data-ttu-id="8550c-123">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="8550c-123">Update package references</span></span>
+## <a name="update-package-references"></a><span data-ttu-id="d5a22-112">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="d5a22-112">Update package references</span></span>
 
-<span data-ttu-id="8550c-124">Si vous ciblez .NET Core, supprimez le `Version` attribut pour la référence de métapackage.</span><span class="sxs-lookup"><span data-stu-id="8550c-124">If targeting .NET Core, remove the `Version` attribute for the metapackage reference.</span></span> <span data-ttu-id="8550c-125">Inclusion d’un `Version` attribut entraîne l’avertissement suivant :</span><span class="sxs-lookup"><span data-stu-id="8550c-125">Inclusion of a `Version` attribute results in the following warning:</span></span>
+<span data-ttu-id="d5a22-113">Si vous ciblez .NET Core, supprimez le `Version` attribut pour la référence de métapackage.</span><span class="sxs-lookup"><span data-stu-id="d5a22-113">If targeting .NET Core, remove the `Version` attribute for the metapackage reference.</span></span> <span data-ttu-id="d5a22-114">Inclusion d’un `Version` attribut entraîne l’avertissement suivant :</span><span class="sxs-lookup"><span data-stu-id="d5a22-114">Inclusion of a `Version` attribute results in the following warning:</span></span>
 
 ```console
 A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`. Specifying the version of this package is not recommended. For more information, see https://aka.ms/sdkimplicitrefs
 ```
 
-<span data-ttu-id="8550c-126">La référence métapackage doit ressembler à ce qui suit `<PackageReference />` nœud :</span><span class="sxs-lookup"><span data-stu-id="8550c-126">The metapackage reference should resemble the following `<PackageReference />` node:</span></span>
+<span data-ttu-id="d5a22-115">La référence métapackage doit ressembler à ce qui suit `<PackageReference />` nœud :</span><span class="sxs-lookup"><span data-stu-id="d5a22-115">The metapackage reference should resemble the following `<PackageReference />` node:</span></span>
 
 ```xml
 <ItemGroup>
@@ -81,7 +63,7 @@ A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`.
 </ItemGroup>
 ```
 
-<span data-ttu-id="8550c-127">Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="8550c-127">If targeting .NET Framework, update each package reference's `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="8550c-128">Voici les références de package dans un projet ASP.NET Core 2.2 classique qui ciblent .NET Framework :</span><span class="sxs-lookup"><span data-stu-id="8550c-128">Here are the package references in a typical ASP.NET Core 2.2 project targeting .NET Framework:</span></span>
+<span data-ttu-id="d5a22-116">Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="d5a22-116">If targeting .NET Framework, update each package reference's `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="d5a22-117">Voici les références de package dans un projet ASP.NET Core 2.2 classique qui ciblent .NET Framework :</span><span class="sxs-lookup"><span data-stu-id="d5a22-117">Here are the package references in a typical ASP.NET Core 2.2 project targeting .NET Framework:</span></span>
 
 ```xml
 <ItemGroup>
@@ -93,17 +75,28 @@ A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`.
 </ItemGroup>
 ```
 
-## <a name="update-compatibility-version"></a><span data-ttu-id="8550c-129">Version de compatibilité de mise à jour</span><span class="sxs-lookup"><span data-stu-id="8550c-129">Update compatibility version</span></span>
+## <a name="update-compatibility-version"></a><span data-ttu-id="d5a22-118">Version de compatibilité de mise à jour</span><span class="sxs-lookup"><span data-stu-id="d5a22-118">Update compatibility version</span></span>
 
-<span data-ttu-id="8550c-130">Mettre à jour la version de compatibilité dans `Startup.ConfigureServices` à `Version_2_2`:</span><span class="sxs-lookup"><span data-stu-id="8550c-130">Update the compatibility version in `Startup.ConfigureServices` to `Version_2_2`:</span></span>
+<span data-ttu-id="d5a22-119">Mettre à jour la version de compatibilité dans `Startup.ConfigureServices` à `Version_2_2`:</span><span class="sxs-lookup"><span data-stu-id="d5a22-119">Update the compatibility version in `Startup.ConfigureServices` to `Version_2_2`:</span></span>
 
 ```csharp
 services.AddMvc()
         .SetCompatibilityVersion(CompatibilityVersion.Version_2_2);
 ```
 
-## <a name="additional-resources"></a><span data-ttu-id="8550c-131">Ressources supplémentaires</span><span class="sxs-lookup"><span data-stu-id="8550c-131">Additional resources</span></span>
+## <a name="update-docker-images"></a><span data-ttu-id="d5a22-120">Mettre à jour des images Docker</span><span class="sxs-lookup"><span data-stu-id="d5a22-120">Update Docker images</span></span>
+
+<span data-ttu-id="d5a22-121">Le tableau suivant montre l’image Docker de modifications de la balise :</span><span class="sxs-lookup"><span data-stu-id="d5a22-121">The following table shows the Docker image tag changes:</span></span>
+
+|<span data-ttu-id="d5a22-122">2.1</span><span class="sxs-lookup"><span data-stu-id="d5a22-122">2.1</span></span>                                       |<span data-ttu-id="d5a22-123">2.2</span><span class="sxs-lookup"><span data-stu-id="d5a22-123">2.2</span></span>                                       |
+|------------------------------------------|------------------------------------------|
+|`microsoft/dotnet:2.1-aspnetcore-runtime` |`microsoft/dotnet:2.2-aspnetcore-runtime` |
+|`microsoft/dotnet:2.1-sdk`                |`microsoft/dotnet:2.2-sdk`                |
+
+<span data-ttu-id="d5a22-124">Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.</span><span class="sxs-lookup"><span data-stu-id="d5a22-124">Change the `FROM` lines in your *Dockerfile* to use the new image tags in the preceding table's 2.2 column.</span></span>
+
+## <a name="additional-resources"></a><span data-ttu-id="d5a22-125">Ressources supplémentaires</span><span class="sxs-lookup"><span data-stu-id="d5a22-125">Additional resources</span></span>
 
 * <xref:mvc/compatibility-version>
 * <xref:fundamentals/metapackage-app>
-* [<span data-ttu-id="8550c-132">Références de package implicites</span><span class="sxs-lookup"><span data-stu-id="8550c-132">Implicit package references</span></span>](/dotnet/core/tools/csproj#implicit-package-references)
+* [<span data-ttu-id="d5a22-126">Références de package implicites</span><span class="sxs-lookup"><span data-stu-id="d5a22-126">Implicit package references</span></span>](/dotnet/core/tools/csproj#implicit-package-references)
