commit translated contents

--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,14 +4,14 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 12/04/2018
+ms.date: 12/08/2018
 uid: migration/21-to-22
-ms.openlocfilehash: e8f98825d8a68fd88173ca146e3b6fc198570c91
-ms.sourcegitcommit: 7c59fc79410185be6c973e5e6e6dd85cf6efc4d6
+ms.openlocfilehash: f95db175d26ed20cc35248ac55b177f5f496203f
+ms.sourcegitcommit: 1872d2e6f299093c78a6795a486929ffb0bbffff
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 12/05/2018
-ms.locfileid: "52897988"
+ms.lasthandoff: 12/11/2018
+ms.locfileid: "53216805"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer d’ASP.NET Core 2.1 vers 2.2
 
@@ -35,17 +35,15 @@ Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du F
 <TargetFramework>net461</TargetFramework>
 ```
 
-## <a name="update-net-core-sdk-version-in-globaljson"></a>Mettre à jour la version du SDK .NET Core dans global.json
+## <a name="adopt-the-iis-in-process-hosting-model"></a>Adopter le modèle d’hébergement intra-processus IIS
 
-Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :
+Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundamentals/servers/aspnet-core-module#in-process-hosting-model), ajouter le `<AspNetCoreHostingModel>` propriété avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :
 
-```json
-{
-  "sdk": {
-    "version": "2.2.100"
-  }
-}
+```xml
+<AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
 ```
+
+Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-model>.
 
 ## <a name="update-package-references"></a>Mettre à jour les références de package
 
@@ -69,11 +67,39 @@ Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Ver
 <ItemGroup>
   <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
   <PackageReference Include="Microsoft.AspNetCore.CookiePolicy" Version="2.2.0" />
-  <PackageReference Include="Microsoft.AspNetCore.HttpsPolicy" Version="2.2.0"/>
+  <PackageReference Include="Microsoft.AspNetCore.HttpsPolicy" Version="2.2.0" />
   <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
   <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
 </ItemGroup>
 ```
+
+## <a name="update-net-core-sdk-version-in-globaljson"></a>Mettre à jour la version du SDK .NET Core dans global.json
+
+Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :
+
+```json
+{
+  "sdk": {
+    "version": "2.2.100"
+  }
+}
+```
+
+## <a name="call-configurekestrel-instead-of-usekestrel"></a>Appelez ConfigureKestrel au lieu de UseKestrel
+
+Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> dans le `CreateWebHostBuilder` méthode de la `Program` classe, appelez `ConfigureKestrel` à la place pour éviter les conflits avec la [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/aspnet-core-module#in-process-hosting-model):
+
+```csharp
+public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
+    WebHost.CreateDefaultBuilder(args)
+        .UseStartup<Startup>()
+        .ConfigureKestrel((context, options) =>
+        {
+            // Set properties and call methods on options
+        });
+```
+
+Pour plus d'informations, consultez <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.
 
 ## <a name="update-compatibility-version"></a>Version de compatibilité de mise à jour
 
@@ -88,10 +114,10 @@ services.AddMvc()
 
 Le tableau suivant montre l’image Docker de modifications de la balise :
 
-|2.1                                       |2.2                                       |
-|------------------------------------------|------------------------------------------|
-|`microsoft/dotnet:2.1-aspnetcore-runtime` |`microsoft/dotnet:2.2-aspnetcore-runtime` |
-|`microsoft/dotnet:2.1-sdk`                |`microsoft/dotnet:2.2-sdk`                |
+| 2.1                                       | 2.2                                       |
+| ----------------------------------------- | ----------------------------------------- |
+| `microsoft/dotnet:2.1-aspnetcore-runtime` | `microsoft/dotnet:2.2-aspnetcore-runtime` |
+| `microsoft/dotnet:2.1-sdk`                | `microsoft/dotnet:2.2-sdk`                |
 
 Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.
 
