--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,14 +4,14 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 12/11/2018
+ms.date: 12/12/2018
 uid: migration/21-to-22
-ms.openlocfilehash: 09602667098592814c0bf41852f64e9a32202b27
-ms.sourcegitcommit: b34b25da2ab68e6495b2460ff570468f16a9bf0d
+ms.openlocfilehash: 1f990dfa875604e4d5ea62943aabf3cee1e1ce94
+ms.sourcegitcommit: 1ea1b4fc58055c62728143388562689f1ef96cb2
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 12/12/2018
-ms.locfileid: "53284550"
+ms.lasthandoff: 12/13/2018
+ms.locfileid: "53329118"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer d’ASP.NET Core 2.1 vers 2.2
 
@@ -84,6 +84,12 @@ Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json
   }
 }
 ```
+
+## <a name="update-launch-settings"></a>Mettre à jour les paramètres de lancement
+
+Si à l’aide de Visual Studio Code, de mettre à jour le fichier de paramètres de lancement du projet (*.vscode/launch.json*). Le `program` chemin d’accès doit référencer le nouveau moniker du Framework cible :
+
+[!code-json[](21-to-22/samples/launch.json?highlight=10)]
 
 ## <a name="call-configurekestrel-instead-of-usekestrel"></a>Appelez ConfigureKestrel au lieu de UseKestrel
 
